# nutricompare

./: .gitignore  README.md  setup.cfg  todo.md
nutricompare/: Product.py  __main__.py  const.py
protein_emperor/: Product.py  __main__.py
tests/: example_products.json  test_Product.py
