[metadata]
name = nutricompare
description = Compare macronutrient (protein, carb, fat) density of a product compared to its price to find the most efficient food sources.
version = 0.1.0
author = FancySnacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, linux, win32, cygwin, osx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages = nutricompare
python_requires = >=3.11
zip_safe = no

[options.entry_points]
console_scripts =
    resc = nutricompare.__main__:main

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.2.0

[coverage:run]
source = nutricompare
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=nutricompare
    --cov-report=term-missing